# c4-e5-chess

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  problematic.fen  test_results.md
.github/workflows/: rust-clippy.yml
benches/: basic_benchmark.rs
src/: lib.rs  main.rs
src/cmd/: cli.rs  constants.rs  mod.rs  time_management.rs
src/engine/: constants.rs  evaluate.rs  game.rs  helpers.rs  history.rs  mod.rs  move_gen.rs  negamax.rs  negascout.rs  pvs.rs  quiesce.rs  store.rs  types.rs
src/eval/: constants.rs  evaluate.rs  evaluation.rs  helpers.rs  mod.rs  simple.rs
src/misc/: helpers.rs  mod.rs  types.rs
tests/: bratko_kopec.rs  debug.rs  eigenmann.rs  iq.rs  mate_positions.rs  positions.rs  problematic.fen
tests/epd/: debug.epd  eigenmann.epd
