[package]
name = "c4e5r"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = "3.2"
timer = "0.2"
chrono = "0.4"
log = { version = "0.4", features = ["release_max_level_off"] }
simple-logging = "2.0"
hashbrown = "0.13"
rayon = "1.7"

[dev-dependencies]
test-case = "3.0.0"
ctor = "0.2"
serial_test = "2.0"

[profile.release]
strip = true
panic = "abort"

